update about, index and header

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,37 +13,49 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../config';
 	<body>
 		<Header title={SITE_TITLE} />
 		<main>
-			<h1>🧑‍🚀 Hello, Astronaut!</h1>
+			<h1>👨🏼‍💼Hola, Bienvenid@</h1>
 			<p>
-				Welcome to the official <a href="https://astro.build/">Astro</a> blog starter template. This
-				template serves as a lightweight, minimally-styled starting point for anyone looking to build
-				a personal website, blog, or portfolio with Astro.
+				Al blog de Raul Consciencia. Me encanta ayudar a los demás a encontrar la fuerza que necesitan para superar cualquier reto que se les presente en la vida.
 			</p>
+			
 			<p>
-				This template comes with a few integrations already configured in your
-				<code>astro.config.mjs</code> file. You can customize your setup with
-				<a href="https://astro.build/integrations">Astro Integrations</a> to add tools like Tailwind,
-				React, or Vue to your project.
+				En una consulta psicológica, podrás trabajar en tu desarrollo personal y en el conocimiento de ti mismo. Podrás explorar por qué te sientes como lo haces, cómo afecta a tu vida y las formas en que puedes crecer.
 			</p>
-			<p>Here are a few ideas on how to get started with the template:</p>
+
+			<p>
+				Este tipo de crecimiento personal es increíblemente importante por varias razones:
+			</p>
+
 			<ul>
-				<li>Edit this page in <code>src/pages/index.astro</code></li>
-				<li>Edit the site header items in <code>src/components/Header.astro</code></li>
-				<li>Add your name to the footer in <code>src/components/Footer.astro</code></li>
-				<li>Check out the included blog posts in <code>src/pages/blog/</code></li>
-				<li>Customize the blog post page layout in <code>src/layouts/BlogPost.astro</code></li>
+				<li>Te ayuda a entenderte mejor, para que puedas tomar mejores decisiones sobre tu vida (y cómo mejorarla).</li>
+				<li>Te da una visión de tu pasado y de cómo está afectando a tu presente.</li>
+				<li>Te permite establecer una relación con un profesional que puede guiarte y apoyarte en este proceso.
+				</li>
 			</ul>
+
 			<p>
-				Have fun! If you get stuck, remember to <a href="https://docs.astro.build/"
-					>read the docs
-				</a> or <a href="https://astro.build/chat">join us on Discord</a> to ask questions.
+				Si estás cansado de sentirte estancado, o si tu vida simplemente no está donde quieres que esté, entonces estoy aquí para ayudarte.
+
 			</p>
+
 			<p>
-				Looking for a blog template with a bit more personality? Check out <a
-					href="https://github.com/Charca/astro-blog-template"
-					>astro-blog-template
-				</a> by <a href="https://twitter.com/Charca">Maxi Ferreira</a>.
+				Puedo ayudarte a convertirte en la persona que quieres ser proporcionando un espacio seguro para la autorreflexión y el crecimiento. Exploraremos lo que te impide alcanzar tus objetivos, y juntos desarrollaremos un plan para superar esos obstáculos. 
 			</p>
+
+			<p>
+				Puedes encontrarme en <a href="https://www.facebook.com/raul.consciencia/">Facebook</a> y 
+				<a href="https://twitter.com/psicord11">Twitter</a>.
+			</p>
+			
+<!-- esto pasara al page del blog
+		 <p>
+				Quiero compartir con ustedes mis experiencias, mis esfuerzos y mis aprendizajes sobre temas relacionados con la salud mental y el bienestar físico del ser humano.
+
+
+
+La razón por la que empecé este blog fue para compartir con otros lo que he aprendido y experimentado en mi vida. Espero que este blog le resulte útil.
+				</p>
+-->
 		</main>
 		<Footer />
 	</body>
