--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,9 +10,9 @@ import { SITE_TITLE } from '../config';
 	<nav>
 		<HeaderLink href="/">Home</HeaderLink>
 		<HeaderLink href="/blog">Blog</HeaderLink>
-		<HeaderLink href="/about">About</HeaderLink>
-		<HeaderLink href="https://twitter.com/astrodotbuild" target="_blank">Twitter</HeaderLink>
-		<HeaderLink href="https://github.com/withastro/astro" target="_blank">GitHub</HeaderLink>
+		<HeaderLink href="/about">Sobre mi</HeaderLink>
+		<HeaderLink href="https://twitter.com/psicord11" target="_blank">Twitter</HeaderLink>
+		<HeaderLink href="https://www.facebook.com/raul.consciencia" target="_blank">Facebook</HeaderLink>
 	</nav>
 </header>
 <style>
