edit path heroimage

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -9,7 +9,7 @@ export interface Props {
 	image?: string;
 }
 
-const { title, description, image = '/placeholder-social.jpg' } = Astro.props;
+const { title, description, image = '/public/si-reflex-s.png' } = Astro.props;
 ---
 
 <!-- Global Metadata -->
