--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -9,13 +9,13 @@ export interface Props {
 	image?: string;
 }
 
-const { title, description, image = '/public/si-reflex-s.png' } = Astro.props;
+const { title, description, image = '' } = Astro.props;
 ---
 
 <!-- Global Metadata -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<link rel="icon" type="image/svg+xml" href="/col-favicon.png" />
+<link rel="icon" type="image/svg+xml" href="/img/col-favicon.png" />
 <meta name="generator" content={Astro.generator} />
 
 <!-- Primary Meta Tags -->
