--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,7 +8,7 @@
 }
 
 html {
-	background: linear-gradient(15deg, rgba(42, 62, 142, 1), #5681f4, rgba(217, 137, 137, 1));
+	background-color: #0d1117;
 
 }
 
