add port.png head update

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -18,6 +18,7 @@ const { title, description, image = '' } = Astro.props;
 <link rel="icon" type="image/svg+xml" href="/img/col-favicon.png" />
 <meta name="generator" content={Astro.generator} />
 
+
 <!-- Primary Meta Tags -->
 <title>{title}</title>
 <meta name="title" content={title} />
@@ -29,6 +30,7 @@ const { title, description, image = '' } = Astro.props;
 <meta property="og:title" content={title} />
 <meta property="og:description" content={description} />
 <meta property="og:image" content={new URL(image, Astro.url)} />
+<meta property="og:image" content="/img/port.png" />
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
