--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -25,10 +25,10 @@ const posts = (await Astro.glob('./blog/*.{md,mdx}')).sort(
 			ul li time {
 				flex: 0 0 130px;
 				font-style: italic;
-				color: #595959;
+				color:  rgb(231, 228, 228);
 			}
 			ul li a:visited {
-				color: #8e32dc;
+				color: #2D3E24;
 			}
 		</style>
 	</head>
