--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -16,7 +16,7 @@ const { title, description, image = '' } = Astro.props;
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <link rel="icon" type="image/svg+xml" href="/img/col-favicon.png" />
-
+<meta name="generator" content={Astro.generator} />
 
 
 <!-- Primary Meta Tags -->
@@ -29,7 +29,6 @@ const { title, description, image = '' } = Astro.props;
 <meta property="og:url" content={Astro.url} />
 <meta property="og:title" content={title} />
 <meta property="og:description" content={description} />
-<meta property="og:image" content={new URL(image, Astro.url)} />
 <meta property="og:image" content="/img/port.png" />
 
 <!-- Twitter -->
@@ -37,4 +36,4 @@ const { title, description, image = '' } = Astro.props;
 <meta property="twitter:url" content={Astro.url} />
 <meta property="twitter:title" content={title} />
 <meta property="twitter:description" content={description} />
-<meta property="twitter:image" content={new URL(image, Astro.url)} />
+<meta property="og:image" content="/img/port.png" />
