--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -9,7 +9,7 @@ export interface Props {
 	image?: string;
 }
 
-const { title, description, image = '' } = Astro.props;
+const { title, description, image = '/img/port.png' } = Astro.props;
 ---
 
 <!-- Global Metadata -->
@@ -29,6 +29,7 @@ const { title, description, image = '' } = Astro.props;
 <meta property="og:url" content={Astro.url} />
 <meta property="og:title" content={title} />
 <meta property="og:description" content={description} />
+<meta property="og:image" content={new URL(image, Astro.url)} />
 <meta property="og:image" content="/img/port.png" />
 
 <!-- Twitter -->
@@ -36,4 +37,5 @@ const { title, description, image = '' } = Astro.props;
 <meta property="twitter:url" content={Astro.url} />
 <meta property="twitter:title" content={title} />
 <meta property="twitter:description" content={description} />
+<meta property="twitter:image" content={new URL(image, Astro.url)} />
 <meta property="og:image" content="/img/port.png" />
