--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,14 +7,16 @@ import { SITE_TITLE } from '../config';
 	<h2>
 		{SITE_TITLE}
 	</h2>
-	<nav>
+	<nav class="navMenu">
 		<HeaderLink href="/">Home</HeaderLink>
 		<HeaderLink href="/blog">Blog</HeaderLink>
 		<HeaderLink href="/about">Sobre mi</HeaderLink>
 		<HeaderLink href="https://twitter.com/psicord11" target="_blank">Twitter</HeaderLink>
 		<HeaderLink href="https://www.facebook.com/raul.consciencia" target="_blank">Facebook</HeaderLink>
+		<HeaderLink href="https://www.instagram.com/consciencia_rd/" target="_blank">Instagram</HeaderLink>
 	</nav>
 </header>
+
 <style>
 	header {
 		margin: 0em 0 2em;
@@ -22,4 +24,9 @@ import { SITE_TITLE } from '../config';
 	h2 {
 		margin: 0.5em 0;
 	}
+a:hover {
+  color: #fddb3a;
+}
+
+
 </style>
