--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,46 +13,35 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../config';
 	<body>
 		<Header title={SITE_TITLE} />
 		<main>
-			<h1>👨🏼‍💼Hola, Bienvenid@</h1>
-			
-			<p>
-				En una consulta psicológica, podrás trabajar en tu desarrollo personal y en el conocimiento de ti mismo. Podrás explorar por qué te sientes como lo haces, cómo afecta a tu vida y las formas en que puedes crecer.
-			</p>
+			<section>
 
-			<p>
-				Este tipo de crecimiento personal es increíblemente importante por varias razones:
-			</p>
-
-			<ul>
-				<li>Te ayuda a entenderte mejor, para que puedas tomar mejores decisiones sobre tu vida (y cómo mejorarla).</li>
-				<li>Te da una visión de tu pasado y de cómo está afectando a tu presente.</li>
-				<li>Te permite establecer una relación con un profesional que puede guiarte y apoyarte en este proceso.
-				</li>
-			</ul>
-
-			<p>
-				Si estás cansado de sentirte estancado, o si tu vida simplemente no está donde quieres que esté, entonces estoy aquí para ayudarte.
-
-			</p>
-
-			<p>
-				Puedo ayudarte a convertirte en la persona que quieres ser proporcionando un espacio seguro para la autorreflexión y el crecimiento. Exploraremos lo que te impide alcanzar tus objetivos, y juntos desarrollaremos un plan para superar esos obstáculos. 
-			</p>
-
-			<p>
-				Puedes encontrarme en <a href="https://www.facebook.com/raul.consciencia/">Facebook</a> y 
-				<a href="https://twitter.com/psicord11">Twitter</a>.
-			</p>
-			
-<!-- esto pasara al page del blog
-		 <p>
-				Quiero compartir con ustedes mis experiencias, mis esfuerzos y mis aprendizajes sobre temas relacionados con la salud mental y el bienestar físico del ser humano.
-
-
-
-La razón por la que empecé este blog fue para compartir con otros lo que he aprendido y experimentado en mi vida. Espero que este blog le resulte útil.
+				<h1>👨🏼‍💼Hola, Bienvenid@</h1>
+				
+				<p>
+					Si estás cansado de sentirte estancado, o si tu vida simplemente no está donde quieres que esté, entonces estoy aquí para ayudarte. Puedo ayudarte a convertirte en la persona que quieres ser proporcionando un espacio seguro para la autorreflexión y el crecimiento. Exploraremos lo que te impide alcanzar tus objetivos, y juntos desarrollaremos un plan para superar esos obstáculos. 
 				</p>
--->
+
+				<p>
+					En una consulta psicológica, podrás trabajar en tu desarrollo personal y en el conocimiento de ti mismo. Podrás explorar por qué te sientes como lo haces, cómo afecta a tu vida y las formas en que puedes crecer.
+				</p>
+
+				<p>
+					Este tipo de crecimiento personal es increíblemente importante por varias razones:
+				</p>
+
+				<ul>
+					<li>Te ayuda a entenderte mejor, para que puedas tomar mejores decisiones sobre tu vida (y cómo mejorarla).</li>
+					<li>Te da una visión de tu pasado y de cómo está afectando a tu presente.</li>
+					<li>Te permite establecer una relación con un profesional que puede guiarte y apoyarte en este proceso.
+					</li>
+				</ul>
+
+				<p>
+					Puedes encontrarme en <a href="https://www.facebook.com/raul.consciencia/">Facebook</a> y 
+					<a href="https://twitter.com/psicord11">Twitter</a>.
+				</p>
+			</section>
+			
 		</main>
 		<Footer />
 	</body>
