--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,9 +11,9 @@ import { SITE_TITLE } from '../config';
 		<HeaderLink href="/">Home</HeaderLink>
 		<HeaderLink href="/blog">Blog</HeaderLink>
 		<HeaderLink href="/about">Sobre mi</HeaderLink>
-		<HeaderLink href="https://twitter.com/psicord11" target="_blank">Twitter</HeaderLink>
-		<HeaderLink href="https://www.facebook.com/raul.consciencia" target="_blank">Facebook</HeaderLink>
-		<HeaderLink href="https://www.instagram.com/consciencia_rd/" target="_blank">Instagram</HeaderLink>
+		<HeaderLink href="https://www.facebook.com/raul.consciencia" target="_blank"><img class="nav-logo-social" src="/public/img/logo-facebook.png" alt=""></HeaderLink>
+		<HeaderLink href="https://www.instagram.com/consciencia_rd/" target="_blank"><img class="nav-logo-social" src="/public/img/logo-instagram.png" alt=""></HeaderLink>
+		<HeaderLink href="https://twitter.com/psicord11" target="_blank"> <img class="nav-logo-social" src="/public/img/145812.png" alt=""> </HeaderLink>
 	</nav>
 </header>
 
@@ -24,9 +24,13 @@ import { SITE_TITLE } from '../config';
 	h2 {
 		margin: 0.5em 0;
 	}
-a:hover {
-  color: #fddb3a;
-}
+	a:hover {
+		color: #fddb3a;
+	}
 
+.nav-logo-social {
+	width: 20px;
+	height: fit-content;
+	}
 
 </style>
