--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -27,8 +27,9 @@ const {
 				margin: 0.25em 0 0;
 			}
 			hr {
-				border-top: 1px solid #ddd;
+				border-top: 1px solid #2D3E24;
 				margin: 1rem 0;
+			
 			}
 		</style>
 	</head>
