--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -2,6 +2,7 @@
 
 import BaseHead from '../components/BaseHead.astro';
 import Header from '../components/Header.astro';
+import BlogPostPreview from '../components/BlogPostPreview.astro';
 import Footer from '../components/Footer.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../config';
 
@@ -16,6 +17,7 @@ const posts = (await Astro.glob('./blog/*.{md,mdx}')).sort(
 	<head>
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 		<style>
+			/* 
 			ul {
 				list-style-type: none;
 				padding: unset;
@@ -38,25 +40,19 @@ const posts = (await Astro.glob('./blog/*.{md,mdx}')).sort(
 				font-size:12px;
 				color:  rgb(172, 156, 156);
 			}
-			/* ul li a:visited {
+			 ul li a:visited {
 				color: #818616;
 			}
 			*/
 
-			.preview-container {
-				display: flex;
-				flex-direction: column;
-				align-items: center;
+			.blog-presentation {
+				background-color: #2D3E24;
+				border-radius: 10px;
+				word-wrap: break-word;
+				font-size: 18px;
 				
-		
 			}
 
-
-			.img-blog {
-				width:450px;
-				padding-bottom: 15px;
-			
-			}
 		</style>
 
 	</head>
@@ -64,43 +60,14 @@ const posts = (await Astro.glob('./blog/*.{md,mdx}')).sort(
 		<Header />
 		<main>
 			<section>
-				<p>
+				<p class="blog-presentation">
 					Deseo compartir con ustedes mis experiencias, mis esfuerzos y mis aprendizajes sobre temas relacionados con la salud mental y el bienestar físico.
-					</p>
+				</p>
 			</section>
-			<section>
-				<ul>
-					{posts.map((post, index) => (
-						<li>
-							<a href={post.url}>
-							<span>{post.frontmatter.title}</span>
-							</a>
-							<span>
-								<time datetime={post.frontmatter.pubDate}>
-								{new Date(post.frontmatter.pubDate).toLocaleDateString('en-us', {
-								year: 'numeric',
-								month: 'short',
-								day: 'numeric',
-								})}
-								</time>
-							</span>
-							<div class="preview-container">
-								
-								<a class="preview-contain" href={post.url}>
-									<img
-									class="img-blog"
-									src={post.frontmatter.heroImage}
-									alt="img-preview"
-									loading={index === 0 ? "eager" : "lazy"}
-									/>	
-								</a>
-								{post.frontmatter.description}
-							</div>	
-						</li>
-						<hr	/>
-					))}
-				</ul>
+			<section aria-label="Blog post list">
+				{posts.map((p) => <BlogPostPreview post={p} />)}
 			</section>
+
 		</main>
 		<Footer />
 	</body>
