--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -12,7 +12,7 @@
 }
 
 html {
-	background-color: #031a2b;
+	background-color: #685fa4;
 
 }
 
@@ -20,7 +20,7 @@ body {
 	font-family: Verdana, sans-serif;
 	margin: auto;
 	padding: 20px;
-	max-width: 65ch;
+	max-width: 75vh;
 	text-align: left;
 	line-height: 1.5;
 	color: rgb(231, 228, 228);
