update blowpost preview

--- a/src/components/BlogPostPreview.astro
+++ b/src/components/BlogPostPreview.astro
@@ -30,9 +30,10 @@ const { post } = Astro.props;
 		</header>
 		<p
 			style="
-			background-color: #2D3E24;
+			
 			border-radius: 10px;
 			text-align: center;
+			color: white;
 			"
 		>{post.frontmatter.description}</p>
 	</a>
@@ -44,9 +45,9 @@ const { post } = Astro.props;
 	}
 
 	.post-preview {
-		background-color: #627a61;
+		background-color: #4E8E7C;
 		margin-bottom: 2rem;
-		border: 1px solid #2D3E24;
+		border: 1px solid #689C6A;
 		box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 		border-radius: 10px;
 		transition : 1066ms;
@@ -57,9 +58,9 @@ const { post } = Astro.props;
 	.post-preview:hover {
 		transition : 1066ms;
 		
-		background-color: #5a7a61;
+		background-color: #689C6A;
 		
-		border: solid 1.5px #57621D;
+		border: solid 1.5px #82AA58;
 	}
 
 	header {
