--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,7 +12,7 @@ import { SITE_TITLE } from '../config';
 		<HeaderLink href="/blog">Blog</HeaderLink>
 		<HeaderLink href="/about">Sobre mi</HeaderLink>
 		<HeaderLink href="https://www.facebook.com/raul.consciencia" target="_blank"><img class="nav-logo-social" src="/public/img/logo-facebook.png" alt=""></HeaderLink>
-		<HeaderLink href="https://www.instagram.com/consciencia_rd/" target="_blank"><img class="nav-logo-social" src="/public/img/logo-instagram.png" alt=""></HeaderLink>
+		<HeaderLink href="https://www.instagram.com/consciencia_rd/" target="_blank"><img class="nav-logo-social" src="/img/logo-instagram.png" alt=""></HeaderLink>
 		<HeaderLink href="https://twitter.com/psicord11" target="_blank"> <img class="nav-logo-social" src="/public/img/145812.png" alt=""> </HeaderLink>
 	</nav>
 </header>
