--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -46,10 +46,11 @@ const posts = (await Astro.glob('./blog/*.{md,mdx}')).sort(
 			*/
 
 			.blog-presentation {
-				background-color: #2D3E24;
+			
 				border-radius: 10px;
 				word-wrap: break-word;
 				font-size: 18px;
+				color: white;
 				
 			}
 
